# EventDrivedNetFrame

./: .gitignore  README.md
EventDrivedNetFrame/: CMakeLists.txt  DynLib.cc  DynLib.h  EventDrivedNetFrame.cc  PluginManager.cc  PluginManager.h
EventDrivedNetFrame/DDNFCommon/DDNFCore/: CMakeLists.txt  Core.h  Map.hpp  Performance.hpp  Singleton.hpp
EventDrivedNetFrame/DDNFCommon/DDNFLogPlugin/: CMakeLists.txt  LogModule.cpp  LogModule.h  LogPlugin.cpp  LogPlugin.h  dllmain.cpp
EventDrivedNetFrame/DDNFCommon/DDNFMessageDefine/: DDNFLimit.h  cpp.bat  cpp.sh
EventDrivedNetFrame/DDNFCommon/DDNFMessageDefine/proto/: DDNFDefine.proto
EventDrivedNetFrame/DDNFCommon/DDNFMessageDefine/protocol/: DDNFDefine.pb.cc  DDNFDefine.pb.h
EventDrivedNetFrame/DDNFCommon/DDNFNetPlugin/: CMakeLists.txt  INet.h  INetModule.cc  INetModule.h  Net.cc  Net.h  NetClientModule.cpp  NetClientModule.h  NetModule.cc  NetModule.h  NetPlugin.cc  NetPlugin.h  dllmain.cc
EventDrivedNetFrame/DDNFCommon/DDNFPluginModule/: ILogModule.h  IModule.h  INetClientModule.h  INetModule.h  IPlugin.h  IPluginManager.h  Platform.h
EventDrivedNetFrame/Dependencies/common/: crc32.hpp
EventDrivedNetFrame/Dependencies/ios/libevent/lib/: libevent.la  libevent_core.la  libevent_extra.la  libevent_pthreads.la
EventDrivedNetFrame/Dependencies/ios/libevent/lib/pkgconfig/: libevent.pc  libevent_pthreads.pc
EventDrivedNetFrame/Dependencies/libevent/: libevent.lib  libevent.vcxproj  libevent_core.lib  libevent_core.vcxproj  libevent_extras.lib
EventDrivedNetFrame/Dependencies/protobuf-3.6.1/protobuf_build_x64_windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  check.vcxproj  check.vcxproj.filters  cmake_install.cmake  extract_includes.bat  gmock.vcxproj  gmock.vcxproj.filters  gmock_main.vcxproj  gmock_main.vcxproj.filters  libprotobuf-lite.vcxproj  libprotobuf-lite.vcxproj.filters  libprotobuf.vcxproj  libprotobuf.vcxproj.filters  libprotoc.vcxproj  libprotoc.vcxproj.filters  lite-arena-test.vcxproj  lite-arena-test.vcxproj.filters  lite-test.vcxproj  lite-test.vcxproj.filters  protobuf.sln  protoc.vcxproj  protoc.vcxproj.filters  test_plugin.vcxproj  test_plugin.vcxproj.filters  tests.vcxproj  tests.vcxproj.filters
EventDrivedNetFrame/Dependencies/protobuf-3.6.1/protobuf_build_x64_windows/cmake/: protobuf-targets.cmake
